--- a/config.json
+++ b/config.json
@@ -25,7 +25,7 @@
     "notes": "if you enable this feature, only the ids in the whiteListIds section can use the bot"
   },
           "nickNameBot": "༒✯𝑆𝐴𝑇𝑂𝑅𝑈 𝐺𝑂𝐽𝑂 𝐵𝑂𝑇✯༒",
-  "prefix": "€",
+  "prefix": ".",
   "database": {
     "type": "sqlite",
     "uriMongodb": "",
